test/parse/relaxed/bad/valuetdifferent.sol
s SATISFIABLE
v 1
v -1
v 0
